--- a/d1/img.html
+++ b/d1/img.html
@@ -8,7 +8,7 @@
   </head>
   <header>
     <div class="home">
-      <h1><a href="/web.htmls">Home</a></h1>
+      <h1><a href="/web.html">Home</a></h1>
       <h3>학습</h3>
     </div>
     <nav class="header">
@@ -19,7 +19,7 @@
     </nav>
     <hr />
   </header>
-  <body class="box">
+  <body class="box2">
     <div class="img1">
       <img src="/d1/src/iPhone_air.webp" alt="air_white" />
     </div>
