--- a/d1/link.html
+++ b/d1/link.html
@@ -8,14 +8,14 @@
   </head>
   <header>
     <div class="home">
-      <h1><a href="web.html">Home</a></h1>
+      <h1><a href="/web.html">Home</a></h1>
       <h3>학습</h3>
     </div>
     <nav class="header">
-      <div class="box1"><a href="d1/img.html">img</a></div>
-      <div class="box1"><a href="d1/link.html">link</a></div>
-      <div class="box1"><a href="d1/tag.html">tag</a></div>
-      <div class="box1"><a href="d1/tag1.html">tag1</a></div>
+      <div class="box1"><a href="/d1/img.html">img</a></div>
+      <div class="box1"><a href="/d1/link.html">link</a></div>
+      <div class="box1"><a href="/d1/tag.html">tag</a></div>
+      <div class="box1"><a href="/d1/tag1.html">tag1</a></div>
     </nav>
     <hr />
   </header>
