--- a/d1/tag.html
+++ b/d1/tag.html
@@ -8,7 +8,7 @@
   </head>
   <header>
     <div class="home">
-      <h1><a href="web.html">Home</a></h1>
+      <h1><a href="/web.html">Home</a></h1>
       <h3>학습</h3>
     </div>
     <nav class="header">
