--- a/web.html
+++ b/web.html
@@ -16,6 +16,7 @@
       <div class="box1"><a href="d1/link.html">link</a></div>
       <div class="box1"><a href="d1/tag.html">tag</a></div>
       <div class="box1"><a href="d1/tag1.html">tag1</a></div>
+      <div class="box1"><a href="d1/css_text.html">css_text</a></div>
     </nav>
     <hr />
   </header>
