--- a/d2/navHtml.html
+++ b/d2/navHtml.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="d2Css.css" />
+    <title>Document</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -22,14 +22,23 @@
         <div class="box1"><a href="/d2/tag_select.html">select</a></div>
         <div class="box1"><a href="/d2/co.html">boxCss</a></div>
         <div class="box1"><a href="/d2/navHtml.html">navHtml</a></div>
-        <div class="box1"><a href="/d3/float_Text.html">floatText</a></div>
-        <div class="box1"><a href="/d3/rayOut.html">rayOut</a></div>
-        <div class="box1"><a href="/d3/rayOut2.html">rayOut2</a></div>
-        <div class="box1"><a href="/d3/box.html">box</a></div>
-        <div class="box1"><a href="/d3/test.html">test</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <div class="div1">
+      <div class="red">b1</div>
+      <div class="blue">b2</div>
+    </div>
+    <div class="green">green</div>
+    <hr />
+    <div>2025년 09월 30일 (火曜日) 월말 평가</div>
+    <div>
+      <ul>
+        WEB 3문제
+        <li>1. Git HUB "주소"~~.io/에 올리기(반응형 css)</li>
+        <li>2. My 프로필(자기소개 메뉴)</li>
+        <li>3. JS이용해여 기능 추가</li>
+      </ul>
+    </div>
   </body>
 </html>
