--- a/d3/rayOut2.html
+++ b/d3/rayOut2.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="d3Style.css" />
+    <title>2단 rayOut</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -30,6 +30,28 @@
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!--  -->
+
+    <div class="div">
+      <section class="section">
+        <h3>본문</h3>
+      </section>
+      <div class="aside">
+        <h4>사이드</h4>
+        <ul>
+          <li>
+            float는 이미지 옆에 텍스트를 배치하거나 아주 간단한 레이아웃에만
+            쓰는 것이 좋음.
+          </li>
+          <li>
+            복잡한 구조에서는 flexbox(display: space between)나 grid로 전환하는
+            게 유지보수도 쉽고 오류도 줄어듬
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!--  -->
+    <hr class="hr" />
+    <footer class="footer">@</footer>
   </body>
 </html>
