--- a/d2/tag_select.html
+++ b/d2/tag_select.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="d2Css.css" />
+    <title>cssBox</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -22,14 +21,21 @@
         <div class="box1"><a href="/d2/tag_select.html">select</a></div>
         <div class="box1"><a href="/d2/co.html">boxCss</a></div>
         <div class="box1"><a href="/d2/navHtml.html">navHtml</a></div>
-        <div class="box1"><a href="/d3/float_Text.html">floatText</a></div>
-        <div class="box1"><a href="/d3/rayOut.html">rayOut</a></div>
-        <div class="box1"><a href="/d3/rayOut2.html">rayOut2</a></div>
-        <div class="box1"><a href="/d3/box.html">box</a></div>
-        <div class="box1"><a href="/d3/test.html">test</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!-- display: block => 수직배치 // 기본은 inline -->
+    <!-- display: none => 소멸 // visibility: hidden => 자리유지하면서 소멸 -->
+    <div>
+      <img src="/d1/src/iPhone_air.webp" alt="1" />
+      <img src="/d1/src/iPhone_air.webp" alt="1" />
+      <img src="/d1/src/iPhone_air.webp" alt="1" />
+    </div>
+    <hr />
+    <div class="div1">
+      <img src="/d1/src/iPhone_air.webp" alt="1" />
+      <img src="/d1/src/iPhone_air.webp" alt="1" class="img1" />
+      <img src="/d1/src/iPhone_air.webp" alt="1" />
+    </div>
   </body>
 </html>
