--- a/d3/box.html
+++ b/d3/box.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="d3Style.css" />
+    <title>Document</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -24,12 +24,14 @@
         <div class="box1"><a href="/d2/navHtml.html">navHtml</a></div>
         <div class="box1"><a href="/d3/float_Text.html">floatText</a></div>
         <div class="box1"><a href="/d3/rayOut.html">rayOut</a></div>
-        <div class="box1"><a href="/d3/rayOut2.html">rayOut2</a></div>
         <div class="box1"><a href="/d3/box.html">box</a></div>
-        <div class="box1"><a href="/d3/test.html">test</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!--  -->
+    <div class="div">
+      <div class="red">b1</div>
+      <div class="blue">b2</div>
+    </div>
   </body>
 </html>
