--- a/d3/float_Text.html
+++ b/d3/float_Text.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="d3Style.css" />
+    <title>float_Text</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -22,14 +22,27 @@
         <div class="box1"><a href="/d2/tag_select.html">select</a></div>
         <div class="box1"><a href="/d2/co.html">boxCss</a></div>
         <div class="box1"><a href="/d2/navHtml.html">navHtml</a></div>
-        <div class="box1"><a href="/d3/float_Text.html">floatText</a></div>
-        <div class="box1"><a href="/d3/rayOut.html">rayOut</a></div>
-        <div class="box1"><a href="/d3/rayOut2.html">rayOut2</a></div>
-        <div class="box1"><a href="/d3/box.html">box</a></div>
-        <div class="box1"><a href="/d3/test.html">test</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!--  -->
+    <div class="div">
+      <img src="/d1/src/iPhone_air.webp" alt="air" class="img" />
+      <h2 class="h2">Float Test</h2>
+      <ul>
+        <li>
+          display: flex를 설정하면 자식 요소들의 레이아웃은 float가 아닌 flexbox
+          규칙에 따라 결정됨.
+        </li>
+        <li>
+          이때 float 속성을 자식에게 줘도 무시되거나 예상대로 작동하지 않음.
+        </li>
+        <li>
+          즉, 부모가 flex 컨테이너가 되면 자식 요소들은 float 대신 flex의 정렬
+          방식(justify-content, align-items, flex-direction 등)에 따라 배치
+        </li>
+      </ul>
+      <p>P태그 = 블록 태그 요소이기에 이미지와 나란히 배치 불가.</p>
+    </div>
   </body>
 </html>
