--- a/d4/mdq2.html
+++ b/d4/mdq2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="/d4/basecss.css" />
+    <title>미디어 쿼리 - 레이아웃 설정</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -30,14 +30,20 @@
         <div class="box1"><a href="/d3/search.html">search</a></div>
         <div class="box1"><a href="/d3/login.html">login</a></div>
         <div class="box1"><a href="/d4/viewport.html">viewport</a></div>
+        <div class="box1"><a href="/d4/viewport2.html">viewport2</a></div>
         <div class="box1"><a href="/d4/mdq1.html">mq1</a></div>
-        <div class="box1"><a href="/d4/mdq2.html">mq2</a></div>
-        <div class="box1"><a href="/d4/child.html">선택자</a></div>
-        <div class="box1"><a href="/d4/child2.html">선택자 사용</a></div>
-        <div class="box1"><a href="/d4/uiEl.html">form태그 추가</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!--  -->
+    <div>
+      @media test
+      <section class="container"></section>
+    </div>
+    <!--  -->
+    <hr />
+    <div>
+      <footer>푸터</footer>
+    </div>
   </body>
 </html>
