--- a/d4/child.html
+++ b/d4/child.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="/d4/basecss.css" />
+    <title>선택자</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -30,14 +30,43 @@
         <div class="box1"><a href="/d3/search.html">search</a></div>
         <div class="box1"><a href="/d3/login.html">login</a></div>
         <div class="box1"><a href="/d4/viewport.html">viewport</a></div>
+        <div class="box1"><a href="/d4/viewport2.html">viewport2</a></div>
         <div class="box1"><a href="/d4/mdq1.html">mq1</a></div>
         <div class="box1"><a href="/d4/mdq2.html">mq2</a></div>
-        <div class="box1"><a href="/d4/child.html">선택자</a></div>
-        <div class="box1"><a href="/d4/child2.html">선택자 사용</a></div>
         <div class="box1"><a href="/d4/uiEl.html">form태그 추가</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <!-- <div>
+      <div>
+        예약
+        <ul>
+          요금
+          <li>1박 2일 : 원</li>
+          <li>2박 3일 : 원</li>
+          <li>3박 4일 : 원</li>
+        </ul>
+      </div>
+    </div> -->
+    <div>
+      <p>
+        자식 선택자 → 부모 태그 `''>'' 자식 <br />ex) ul > li{(css 스타일링)}
+      </p>
+    </div>
+    <br />
+    <div>
+      <p>
+        후손 선택자 → 부모 태그 "(공백) " 자식<br />ex)ul li{(css 스타일링)}
+      </p>
+    </div>
+    <br />
+    <div>
+      <p class="p1">
+        가상 선택자 → 태그 ":" ~ <br />
+        ex) container:hover { color: white; background-color: blueviolet; }
+        <br />=> container class name 뒤에 (가상 선택자) : 를 붙인 후 hover css
+        스타일 선택
+      </p>
+    </div>
   </body>
 </html>
