--- a/d4/child2.html
+++ b/d4/child2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="/d4/css1.css" />
+    <title>가상 선택자 사용</title>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -30,6 +30,7 @@
         <div class="box1"><a href="/d3/search.html">search</a></div>
         <div class="box1"><a href="/d3/login.html">login</a></div>
         <div class="box1"><a href="/d4/viewport.html">viewport</a></div>
+        <div class="box1"><a href="/d4/viewport2.html">viewport2</a></div>
         <div class="box1"><a href="/d4/mdq1.html">mq1</a></div>
         <div class="box1"><a href="/d4/mdq2.html">mq2</a></div>
         <div class="box1"><a href="/d4/child.html">선택자</a></div>
@@ -38,6 +39,40 @@
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <div>
+      <div>
+        <ul>
+          구조 가상 선택자란?
+          <li>
+            CSS에서 HTML 요소의 구조나 위치에 따라 스타일을 적용할 수 있게
+            해주는 선택자
+          </li>
+          <li>
+            여러 요소가 나열되있을 경우 <br />class 및 id를 사용하지 않고도
+            스타일을 지정할 요소가 몇번째인지를 지정하여 스타일 적용이 가능함
+          </li>
+        </ul>
+        </div>
+        <hr />
+        <div></div>
+        <ul class="ul">
+          부모태그: 구조가상선택자{}
+          <li>first-child : 부모 요소의 첫 번째 자식 요소에 적용. 
+          예) .ul li:nth-child(1) {color: blue;}
+          </li>
+          <li>last-child : 부모 요소의 마지막 자식 요소에 적용</li>
+          <li>nth-child(n) : 부모 요소의 n번째 자식 요소에 적용</li>
+          <li>
+            nth-last-child(n) : 뒤에서부터 부모 요소의 n번째 자식 요소에 적용
+          </li>
+          <li>only-child : 부모 안에 자식이 하나뿐일 때 적용</li>
+          <li>first-of-type : 같은 타입 중 첫 번째 요소에 적용</li>
+          <li>last-of-type : 같은 타입 중 마지막 요소에 적용</li>
+          <li>nth-of-type(n) : 같은 타입 중 n번째 요소에 적용</li>
+          <li>nth-last-of-type(n) : 같은 타입 중 뒤에서 n번째 요소에 적용</li>
+          <li>only of type : 같은 타입이 하나뿐일 때 적용</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
