--- a/d4/mdq1.html
+++ b/d4/mdq1.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
-    <title>web</title>
+    <link rel="stylesheet" href="/d4/basecss.css" />
+    <title>미디어 쿼리 1</title>
+    <style>
+      /* 768px 미만 해상도 적용 */
+      @media screen and (max-width: 767px) {
+        section {
+          background-color: aliceblue;
+        }
+      }
+      /* 해상ㅇ도 768~ 1024까지 */
+      @media screen and (min-width: 768px) and (max-width: 1023px) {
+        section {
+          background-color: yellow;
+        }
+      }
+      /* 1024px 이상 해상도 */
+      @media screen and (min-width: 1024px) {
+        section {
+          background-color: bisque;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
       <div class="home">
-        <h1><a href="web.html">Home</a></h1>
+        <h1><a href="/web.html">Home</a></h1>
         <h3>학습</h3>
       </div>
       <nav class="box">
@@ -30,14 +50,12 @@
         <div class="box1"><a href="/d3/search.html">search</a></div>
         <div class="box1"><a href="/d3/login.html">login</a></div>
         <div class="box1"><a href="/d4/viewport.html">viewport</a></div>
+        <div class="box1"><a href="/d4/viewport2.html">viewport2</a></div>
         <div class="box1"><a href="/d4/mdq1.html">mq1</a></div>
         <div class="box1"><a href="/d4/mdq2.html">mq2</a></div>
-        <div class="box1"><a href="/d4/child.html">선택자</a></div>
-        <div class="box1"><a href="/d4/child2.html">선택자 사용</a></div>
-        <div class="box1"><a href="/d4/uiEl.html">form태그 추가</a></div>
       </nav>
       <hr />
     </header>
-    <div>body임</div>
+    <section>BOX</section>
   </body>
 </html>
